welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: ')' expected but 'else' found.
                                                      else if (((b>=13)&&(b<=19)) && ((a<=13)||(a>=19)) {return true} 
                                                      ^loneTeen:3: error: Unmatched closing brace '}' ignored here
                                                               else {return false}}}} 
                                                                                  ^loneTeen:4: error: eof expected but '}' found.
 }
 ^